--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                 <p class="medium-6 columns">&copy; StandardLogo Website</p>
                 <div class="medium-6 columns social">
                     <a href="http://twitter.com"><svg><use xlink:href="#twitter-icon"/></svg></a>
-                    <a href="http://instagram.com"><svg><use xlink:href="#instagram-icon"/></a>
-                    <a href="http://facebook.com"><svg><use xlink:href="#facebook-icon"/></a>
+                    <a href="http://instagram.com"><svg><use xlink:href="#instagram-icon"/></svg></a>
+                    <a href="http://facebook.com"><svg><use xlink:href="#facebook-icon"/></svg></a>
                 </div>
             </div>
         </footer>
